--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   ],
   "description": "AI Visual Design Library (AIVDL) - Monorepo for creative AI-native visual design framework.",
   "author": "deft-orchestrator",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.4"
+  }
 }
