feat: Implement end-to-end workflow for intent processing and ECS integration
- Added SimpleWorkflow class to manage the workflow from intent to ECS entity.
- Introduced TranslatorAgent for translating tokens into AST.
- Implemented DebuggerAgent for validating AST and providing feedback.
- Created integration example demonstrating the complete pipeline.
- Added unit tests for SimpleWorkflow and Creative Compiler pipeline.
- Updated package.json to include new dependencies and devDependencies.
- Added TypeScript configuration for module resolution.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
-    "ts-jest": "^29.4.4"
+    "ts-jest": "^29.4.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "dependencies": {
+    "adk-typescript": "github:njraladdin/adk-typescript"
   }
 }
